--- a/example.env
+++ b/example.env
@@ -4,3 +4,4 @@ PASSWORD = PASSWORD
 USER_AGENT = suipiss:v1 (by u/thedylone)
 USERNAME = USERNAME
 SUBREDDITS = SUBREDDITS
+WEBHOOK_URL = WEBHOOK_URL
