update signal test and dotenv

--- a/example.env
+++ b/example.env
@@ -2,6 +2,6 @@ CLIENT_ID = CLIENT_ID
 CLIENT_SECRET = CLIENT_SECRET
 PASSWORD = PASSWORD
 USER_AGENT = suipiss:v1 (by u/thedylone)
-USERNAME = USERNAME
+BOT_USERNAME = USERNAME
 SUBREDDITS = SUBREDDITS
 WEBHOOK_URL = WEBHOOK_URL
